release: 0.4.0-1b
This release consolidates all changes since 0.4.0-beta into a single
commit, cleaning up the git history for the 0.4.0-1b pre-release.

Notable changes since 0.4.0-beta:

Search paths (pure addition, no breaking changes):
- Windows: Everything SDK fallback to full_search, Chocolatey, Scoop,
  JetBrains IDE-bundled JDK
- Linux: SDKMAN, JBang, asdf-vm, JetBrains IDE-bundled JDK
- macOS: SDKMAN, JBang, asdf-vm, Homebrew, JetBrains IDE-bundled JDK
- deep_search auto-fallback from Everything SDK to full_search on errors

JavaRunner API:
- classpath(), module_path(), add_opens(), add_exports(),
  system_property(), env(), working_dir(), timeout()
- execute() changed from self to &self (reusable builder)
- JavaRedirect::append_output() / append_error()

JavaInfo enhancements:
- is_jdk() — detects full JDK by javac presence
- capabilities() — lists available JDK tools (javac, jlink, jshell, etc.)
- JavaVersion::Display falls back to raw string when all fields are 0

Documentation:
- Every public fn, struct, enum, and module now has doc comments
- # Examples sections on all builder methods and key search functions
- # Errors sections on all Result-returning functions
- Readme.md fully rewritten reflecting all current features

Tests (91 unit + 16 doctest, up from 48):
- info.rs: JavaVersion parsing, version matching, Display, is_jdk, capabilities
- error.rs: Display for all 10 variants, From<io::Error>, Error::source
- execute.rs: format_memory edge cases, all builder methods, OutputMode
- search.rs: dedup_nested, is_version_like, filter_by_version, best_match
- cache.rs: TTL expiry, fetcher error propagation, ZERO TTL
- local.rs: JAVA_HOME unset and invalid path
- download/shared.rs: resume I/O, concatenate, copy, move, install source

Polish:
- JavaCache default TTL: 10s -> 300s
- OutputMode made pub
- download/shared.rs: Chinese error messages translated to English
- clippy fixes: collapsible_if, unnecessary_cast
- Removed empty examples/tests.rs (spurio