@@ -12,8 +12,6 @@
 )](https://github.com/TaimWay/java-manager)
 [![Author](https://img.shields.io/badge/Author-TaimWay-green?style=for-the-badge&logo=devdotto&logoColor=white
 )](https://github.com/TaimWay)
-![DevState](https://img.shields.io/badge/DevState-Debug%2FIndev-red?style=for-the-badge&logo=devbox&logoColor=red
-)
 
 A comprehensive Rust library for discovering, managing, and interacting with Java installations.
 
@@ -21,28 +19,31 @@ A comprehensive Rust library for discovering, managing, and interacting with Jav
 
 ---
 
-> **The project is currently under development. All bugs related to the project can be reported by submitting issues on GitHub, and we will regularly fix the reported problems**
-
 ## Features
 
 - **Cross‑platform** – Works on Windows, macOS, and Linux.
-- **Java discovery** – Find Java via `PATH` (`quick_search`), Everything SDK on Windows (`deep_search`), or multi-strategy full scan (`full_search`): registry (HKLM + HKCU, including Azul, BellSoft, Temurin, Corretto, GraalVM), keyword BFS, Microsoft Store, `where`/`/usr/libexec/java_home`, and walkdir.
-- **Structured metadata** – `JavaInfo` provides name, version, vendor, architecture, `JAVA_HOME`, and a parsed `JavaVersion` (major/minor/patch).
-- **Version matching** – `best_match()` and `filter_by_version()` let you pick the right Java for your project by version requirement.
-- **Execution control** – Run JARs or main classes with configurable memory limits, arguments, and I/O redirection.
-- **TTL caching** – `JavaCache` avoids redundant full-disk scans (default 10 s TTL).
-- **Parallel search** – Optional `parallel` feature enables rayon-powered concurrent scanning.
-- **Debug logging** – Built-in `log` crate integration for troubleshooting search paths.
-- **Error handling** – Comprehensive `JavaError` enum including `StaleRegistryEntry` for broken registry references.
+- **Java discovery** – Find Java via `PATH` (`quick_search`), Everything SDK on Windows (`deep_search`), or multi‑strategy full scan (`full_search`):
+  - **Windows**: Registry (HKLM + HKCU, including Azul, BellSoft, Temurin, Corretto, GraalVM), keyword BFS, Microsoft Store, `where` command, Chocolatey, Scoop, JetBrains bundled JDK.
+  - **Linux**: walkdir over `/usr/lib/jvm`, `/usr/java`, `/opt`, `/usr/local`, plus SDKMAN, JBang, asdf‑vm, JetBrains bundled JDK, Minecraft runtime.
+  - **macOS**: `/Library/Java/JavaVirtualMachines`, `/usr/libexec/java_home`, plus SDKMAN, JBang, asdf‑vm, Homebrew, JetBrains bundled JDK, Minecraft runtime.
+  - **All platforms**: `$JAVA_HOME` is always checked first.
+- **Structured metadata** – `JavaInfo` provides name, version, vendor, architecture, `JAVA_HOME`, parsed `JavaVersion`, and JDK capabilities.
+- **Version matching** – `best_match()` and `filter_by_version()` let you pick the right Java by version requirement (`"17"`, `"17.0"`, `"17.0.2"`).
+- **Execution control** – Run JARs or main classes with `JavaRunner`: classpath, module path, `--add-opens`/`--add-exports`, system properties, memory limits, environment variables, working directory, process timeout, I/O redirection with append mode.
+- **TTL caching** – `JavaCache` avoids redundant full‑disk scans (default 300 s TTL).
+- **Parallel search** – Optional `parallel` feature enables rayon‑powered concurrent `JavaInfo` resolution.
+- **Download** – Optional `download` feature for async, resumable, parallel‑chunked JDK downloads with automatic extraction (ZIP / tar.gz).
+- **Debug logging** – Built‑in `log` crate integration.
+- **Nested JRE dedup** – Automatically removes bundled JREs that are sub‑directories of a parent JDK.
 
 ## Installation
 
 ```toml
 [dependencies]
-java-manager = "0.3"
+java-manager = "0.4"
 ```
 
-Or use the `cargo` command:
+Or:
 
 ```bash
 cargo add java-manager
@@ -52,7 +53,8 @@ cargo add java-manager
 
 | Feature | Description |
 |---|---|
-| `parallel` | Enables `parallel_full_search()` via rayon (requires Rust edition 2024 compatible version of rayon) |
+| `parallel` | Enables `parallel_full_search()` via rayon |
+| `download` | Async JDK download with resume, parallel chunks, and archive extraction (ZIP / tar.gz) |
 
 ## Usage
 
@@ -67,10 +69,10 @@ for java in javas {
     println!("Found Java at {} (version {})", java.path.display(), java.version);
 }
 
-// Deep search: Everything SDK (Windows) or walkdir (Linux/macOS)
+// Deep search: Everything SDK (Windows, falls back to full_search) or walkdir (Linux/macOS)
 let all_javas = deep_search()?;
 
-// Full search: registry + BFS + MS Store + where + JVM directories
+// Full search: registry + BFS + MS Store + where + package managers + IDE paths
 let all_javas = full_search()?;
 
 // Check JAVA_HOME environment variable
@@ -82,7 +84,7 @@ if let Some(java) = java_home() {
 ### Filter by version requirement
 
 ```rust
-use java_manager::{quick_search, best_match, filter_by_version, JavaInfo};
+use java_manager::{quick_search, best_match, filter_by_version};
 
 let javas = quick_search()?;
 
@@ -95,13 +97,13 @@ if let Some(java17) = best_match(javas.clone(), "17") {
 let java11_installs = filter_by_version(javas, "11");
 ```
 
-### Cached search (avoids repeated full scans)
+### Cached search
 
 ```rust
 use java_manager::{JavaCache, full_search};
 use std::time::Duration;
 
-let mut cache = JavaCache::new(Duration::from_secs(30));
+let mut cache = JavaCache::new(Duration::from_secs(300));
 
 // First call runs the search, subsequent calls are cached
 let javas = cache.get_or_refresh(|| full_search())?;
@@ -125,7 +127,7 @@ use java_manager::{JavaRunner, JavaRedirect, java_home};
 
 let java = java_home().expect("JAVA_HOME not set");
 
-// Run a JAR file
+// Run a JAR file with memory limits and I/O redirection
 JavaRunner::new()
     .java(java.clone())
     .jar("myapp.jar")
@@ -144,6 +146,52 @@ JavaRunner::new()
     .execute()?;
 ```
 
+### Advanced JavaRunner
+
+```rust
+use java_manager::{JavaRunner, java_home};
+use std::time::Duration;
+
+let java = java_home().expect("JAVA_HOME not set");
+
+JavaRunner::new()
+    .java(java)
+    .jar("app.jar")
+    .classpath(&["lib/*", "config/"])
+    .add_opens("java.base", "java.lang", "ALL-UNNAMED")
+    .add_exports("java.base", "com.sun.internal", "ALL-UNNAMED")
+    .system_property("myapp.config", "prod")
+    .env("MY_VAR", "value")
+    .working_dir("/opt/myapp")
+    .timeout(Duration::from_secs(30))
+    .redirect(
+        JavaRedirect::new()
+            .output("app.log")
+            .append_output()
+            .error("app.err")
+            .append_error()
+    )
+    .execute()?;
+```
+
+### JDK detection and capabilities
+
+```rust
+use java_manager::JavaInfo;
+
+let info = JavaInfo::new("/usr/lib/jvm/java-17-openjdk/bin/java".into())?;
+
+// Check if this is a full JDK (has javac)
+if info.is_jdk() {
+    println!("Full JDK detected");
+}
+
+// List available JDK tools
+let tools = info.capabilities();
+println!("Available tools: {:?}", tools);
+// e.g. ["javac", "javadoc", "jar", "jlink", "jshell", "jcmd"]
+```
+
 ### Metadata from a specific Java path
 
 ```rust
@@ -152,7 +200,7 @@ use java_manager::JavaInfo;
 let info = JavaInfo::new("/usr/lib/jvm/java-11-openjdk/bin/java".into())?;
 println!("Name: {}", info.name);
 println!("Version: {}", info.version);
-println!("Parsed version: {}", info.parsed_version.unwrap()); // e.g. "11.0.2"
+println!("Parsed version: {}", info.parsed_version.unwrap());
 println!("Vendor: {}", info.vendor);
 println!("Architecture: {}", info.architecture);
 println!("JAVA_HOME: {}", info.java_home.display());
@@ -160,17 +208,53 @@ println!("JAVA_HOME: {}", info.java_home.display());
 
 ## API Overview
 
-| Function | Description |
+| Function / Method | Description |
 |---|---|
 | `quick_search()` | Walks `$PATH` — fastest, catches the default Java |
-| `deep_search()` | Windows: Everything SDK. Linux/macOS: delegates to `full_search()` |
-| `full_search()` | Registry (HKLM + HKCU), BFS, Microsoft Store, `where`, JVM directories |
-| `parallel_full_search()` | Same as `full_search()` but uses rayon (feature `parallel`) |
+| `deep_search()` | Windows: Everything SDK (falls back to `full_search`). Linux/macOS: `full_search()` |
+| `full_search()` | Registry, BFS, MS Store, `where`, package managers, IDE paths, JVM directories |
+| `parallel_full_search()` | Same as `full_search()` but with rayon‑parallel `JavaInfo` resolution |
 | `java_home()` | Returns the Java pointed to by `$JAVA_HOME` |
 | `filter_by_version(javas, req)` | Returns installations matching a version requirement |
-| `best_match(javas, req)` | Returns the highest-versioned match |
+| `best_match(javas, req)` | Returns the highest‑versioned match |
 | `JavaCache::new(ttl)` | TTL cache wrapper for search results |
-| `JavaInfo::matches_version(req)` | Checks if this installation matches a version requirement |
+| `JavaInfo::new(path)` | Create `JavaInfo` from a path to `java` or `JAVA_HOME` |
+| `JavaInfo::matches_version(req)` | Checks version requirement match |
+| `JavaInfo::is_jdk()` | Returns `true` if `javac` is present (full JDK) |
+| `JavaInfo::capabilities()` | Returns list of available JDK tools |
+| `JavaInfo::execute(args)` | Run `java` with shell‑word arguments |
+| `JavaRunner::new()` | Builder for configuring and executing Java programs |
+| `JavaRunner::execute()` | Run the configured program |
+
+### JavaRunner builder methods
+
+| Method | Description |
+|---|---|
+| `.java(info)` | Set the Java runtime (required) |
+| `.jar(path)` | Set the JAR to execute |
+| `.main_class(name)` | Set the main class to execute |
+| `.classpath(paths)` | Set classpath (`-cp`) |
+| `.module_path(path)` | Set module path (`--module-path`) |
+| `.add_opens(m, p, t)` | Add `--add-opens` flag |
+| `.add_exports(m, p, t)` | Add `--add-exports` flag |
+| `.system_property(k, v)` | Set `-Dkey=value` |
+| `.min_memory(bytes)` | Set initial heap (`-Xms`) |
+| `.max_memory(bytes)` | Set max heap (`-Xmx`) |
+| `.arg(val)` | Add a program argument |
+| `.env(key, val)` | Set environment variable |
+| `.working_dir(path)` | Set working directory |
+| `.timeout(duration)` | Kill process after timeout |
+| `.redirect(redirect)` | Set I/O redirection |
+
+### JavaRedirect methods
+
+| Method | Description |
+|---|---|
+| `.output(path)` | Redirect stdout to file (truncate) |
+| `.error(path)` | Redirect stderr to file (truncate) |
+| `.input(path)` | Redirect stdin from file |
+| `.append_output()` | Append to stdout file instead of truncating |
+| `.append_error()` | Append to stderr file instead of truncating |
 
 ### Version requirement syntax
 
@@ -184,16 +268,19 @@ println!("JAVA_HOME: {}", info.java_home.display());
 
 `full_search()` attempts multiple discovery strategies on each platform:
 
-- **Windows**: Registry (`HKLM` + `HKCU` for JavaSoft, Azul, BellSoft, Eclipse Temurin, Amazon Corretto, GraalVM) → Keyword BFS on all drives → Microsoft Store → `where java`
-- **Linux**: Walkdir over `/usr/lib/jvm`, `/usr/java`, `/opt`, `/usr/local`, `~/.minecraft/runtime`
-- **macOS**: Walkdir over `/Library/Java/JavaVirtualMachines`, `~/Library/Java/JavaVirtualMachines`, `~/.minecraft/runtime`, plus `/usr/libexec/java_home`
-
-All platforms also check `$JAVA_HOME`.
+| Platform | Search locations |
+|---|---|
+| **Windows** | `$JAVA_HOME` → Registry (HKLM+HKCU for JavaSoft, Azul, BellSoft, Temurin, Corretto, GraalVM) → BFS on all drives → Microsoft Store → `where java` → Chocolatey → Scoop → JetBrains IDE bundled JDK |
+| **Linux** | `$JAVA_HOME` → `/usr/lib/jvm` → `/usr/java` → `/opt` → `/usr/local` → SDKMAN → JBang → asdf‑vm → JetBrains bundled JDK → Minecraft runtime |
+| **macOS** | `$JAVA_HOME` → `/Library/Java/JavaVirtualMachines` → `~/Library/Java/JavaVirtualMachines` → `/usr/libexec/java_home` → SDKMAN → JBang → asdf‑vm → Homebrew → JetBrains bundled JDK → Minecraft runtime |
 
 **Nested JRE deduplication**: When both a JDK and its bundled JRE are
 discovered (e.g. `jdk-xxx/jre/bin/java.exe`), only the JDK-level installation
-is kept. Standalone JREs (whose `java_home` is not a subdirectory of another
-entry) are unaffected. This avoids duplicate entries in results.
+is kept. Standalone JREs are unaffected.
+
+**`deep_search()` fallback**: On Windows, if the Everything SDK is not
+available (service not running / not installed), `deep_search()` automatically
+falls back to `full_search()`.
 
 ## Debug Logging
 
